<resources>
	<string name="app_name">Holy Quran</string>
	<string name="btn_download_pages">تنزيل الصفحات</string>
	<string name="btn_download_pages_en">Download pages</string>
	<string name="btn_download_database">تنزيل قاعدة البيانات للبحث</string>
	<string name="btn_download_database_en">Download database</string>
	<string name="btn_download_tafser">تنزيل التفسير</string>
	<string name="btn_download_tafser_en">Download Tafier</string>
	<string name="btn_download_tareef">تنزيل التعريف</string>
	<string name="btn_download_tareef_en">Download Details book</string>
	<string name="btn_download_dictionary">تنزيل المعجم</string>
	<string name="btn_download_dictionary_en">Download dictionary</string>
	<string name="downloadingpages"> ... تنزيل الصفحات</string>
	<string name="downloadingpages_en">Downloading pages ...</string>
	<string name="downloadingtareef"> ... تنزيل كتاب التعريف</string>
	<string name="downloadingtareef_en">Downloading Details book ...</string>
	<string name="downloadingdictionary"> ... تنزيل المعجم</string>
	<string name="downloadingdictionary_en">Downloading dictionary ...</string>
	<string name="downloadingdatabase"> ... تنزيل قاعدة البيانات للبحث</string>
	<string name="downloadingdatabase_en">Downloading database ...</string>
	<string name="downloadingtafseer"> ... تنزيل التفسير</string>
	<string name="downloadingtafseer_en">Downloading Tafier ...</string>
	<string name="notexistpage">صفحة غير موجودة</string>
	<string name="notexistpage_en">Not exist page ...</string>
	<string name="found">نتيجية البحث </string>
	<string name="found_en">Found</string>
	<string name="SearchNoData">قيمة غير صالحة للبحث اقل قيمة ثلاثة أحرف</string>
	<string name="SearchNoData_en">Not valid criteria, at leaset three characters needed
	</string>
	<string name="Searching"> ... جاري البحث</string>
	<string name="Searching_en">Searching ... </string>
	<string name="Search"> البحث</string>
	<string name="Search_en"> Search</string>
	<string name="defaultbookmark">الورد اليومي,0,0,1#الكهف,293,1,0</string>
	<string name="English">ترجمة للانجليزية</string>
	<string name="English_en">Translate to English</string>
	<string name="GoToActivity">ذهاب إلي</string>
	<string name="GoToActivity_en">Navigate to</string>
	<string name="AboutActivity">عن البرنامج</string>
	<string name="AboutActivity_en">About</string>
	<string name="defaultname">افتراضية</string>
	<string name="defaultname_en">Default</string>
	<string name="notexisttafser">ملف التفسير لهذه الصفحة غير موجود . من فضلك قم
		بتنزيل التفسير من قائمة اعدادات</string>
	<string name="notexisttafser_en">You have to download the tafsier , Please go to
		setting page and click download tafsier</string>
	<string name="notexistdb">ملف قاعدة البيانات غير موجود . من فضلك قم
		بتنزيله من
		قائمة اعدادات</string>
	<string name="notexistdb_en">You have to download the database , Please go to
		setting page and click download database</string>
	<string name="notexistimage">تحتاج للتنزيل صور صفحات المصحف الكريم . من فضلك قم
		بتنزيل الصفحات من قائمة اعدادات</string>
	<string name="notexistimage_en">You have to download the pages first , Please go to
		setting page and click download pages</string>
	<string name="notexistdictionary">لا يوجد معجم لهذه الصفحة </string>
	<string name="notexistdictionary_en">No dictionary for this page</string>
	<string name="alreadyexistbookmark">تم اضافتها بالفعل</string>
	<string name="alreadyexistbookmark_en">Already exist</string>
	<string name="searchPage">الصفحه</string>
	<string name="searchPage_en">Page</string>
	<string name="searchSura">السورة</string>
	<string name="searchSura_en">Verse</string>
	<string name="searchAya">رقم</string>
	<string name="searchAya_en">No</string>
	<string name="searchContent">الآية</string>
	<string name="searchContent_en">Content</string>
	<string name="Language">اللغة</string>
	<string name="Language_en">Language</string>
	<string name="LangEnglish">English</string>
	<string name="LangArabic">العربية</string>
	<string name="holyquran">القرآن الكريم</string>
	<string name="holyquran_en">Holy Quran</string>
	<string name="settings">إعدادات</string>
	<string name="settings_en">Settings</string>
	<string name="about">عن البرنامج</string>
	<string name="about_en">About</string>
	<string name="gotomenu">ذهاب إلي</string>
	<string name="gotomenu_en">Navigate to</string>
	<string name="tafseermenu">التفسير</string>
	<string name="tafseermenu_en">Tafsier</string>
	<string name="mnuTafseer">تفسير السعدي</string>
	<string name="mnuTafseer_en">Alsaady Tafsier</string>
	<string name="mnuTanslation">للانجليزية ترجمة</string>
	<string name="mnuTanslation_en">English translation</string>
	<string name="mnuTaareef">تعريف السورة</string>
	<string name="mnuTaareef_en">Sura Detials</string>
	<string name="mnuDictionary">المعجم</string>
	<string name="mnuDictionary_en">Dictionary</string>
	<string name="mnuZoom">تكبير</string>
	<string name="mnuZoom_en">Zoom</string>
	<string name="lbl_settings">إعدادات</string>
	<string name="lbl_settings_en">Settings</string>
	<string name="bookmark">العلامات</string>
	<string name="bookmark_en">Bookmarks</string>
	<string name="newbookmark">إعدادات العلامات</string>
	<string name="newbookmark_en">Bookmark settings</string>
	<string name="BookmarksActivity">العلامات</string>
	<string name="BookmarksActivity_en">Bookmarks</string>
	<string name="detailsmenu">أخرى</string>
	<string name="detailsmenu_en">Others</string>
	<string name="BookmarkEdit">اعدادت العلامات</string>
	<string name="BookmarkEdit_en">Bookmark settings</string>
	<string name="ButtOK">موافق</string>
	<string name="ButtOK_en">OK</string>
	<string name="ButtCancel">إلغاء</string>
	<string name="ButtCancel_en">Cancel</string>
	<string name="ButtNew">جديد</string>
	<string name="ButtNew_en">New</string>
	<string name="ButtNewCurrent">اضافة الحالية</string>
	<string name="ButtNewCurrent_en">Add current</string>
	<string name="Static">ثابتة</string>
	<string name="Static_en">Static</string>
	<string name="Delete">حذف</string>
	<string name="Delete_en">Delete</string>
	<string name="Name">اسم العلامة </string>
	<string name="Name_en">Name</string>
	<string name="Page">صفحة</string>
	<string name="Pag_ene">Page</string>
	<string name="Default">الحالية</string>
	<string name="Default_en">Current</string>
	<string name="tafseer">تفسير السعدي</string>
	<string name="tafseer_en">Tafsier (explanation)</string>
	<string name="gotoPageHeader">اختر الذهاب الي ...</string>
	<string name="gotoPageHeader_en">Navigate to ...</string>
	<string name="gotoPage1">صفحة</string>
	<string name="gotoPage1_en">Page</string>
	<string name="gotoPage2">جزء</string>
	<string name="gotoPage2_en">Chapter</string>
	<string name="gotoPage3">سورة</string>
	<string name="gotoPage3_en">Surah</string>
	<string-array name="Chapter_array">
		<item>الجزء الأول</item>
		<item>الجزء الثاني</item>
		<item>الجزء الثالث</item>
		<item>الجزء الرابع</item>
		<item>الجزء الخامس</item>
		<item>الجزء السادس</item>
		<item>الجزء السابع</item>
		<item>الجزء الثامن</item>
		<item>الجزء التاسع</item>
		<item>الجزء العاشر</item>
		<item>الجزء الحادي عشر</item>
		<item>الجزء الثاني عشر</item>
		<item>الجزء الثالث عشر</item>
		<item>الجزء الرابع عشر</item>
		<item>الجزء الخامس عشر</item>
		<item>الجزء السادس عشر</item>
		<item>الجزء السابع عشر</item>
		<item>الجزء الثامن عشر</item>
		<item>الجزء التاسع عشر</item>
		<item>الجزء العشرون</item>
		<item>الجزء الحادي و العشرون</item>
		<item>الجزء الثاني و العشرون</item>
		<item>الجزء الثالث و العشرون</item>
		<item>الجزء الرابع و العشرون</item>
		<item>الجزء الخامس و العشرون</item>
		<item>الجزء السادس و العشرون</item>
		<item>الجزء السابع و العشرون</item>
		<item>الجزء الثامن و العشرون</item>
		<item>الجزء التاسع و العشرون</item>
		<item>الجزء الثلاثون</item>
	</string-array>
	<string-array name="Chapter_array_en">
		<item>Chapter One</item>
		<item>Chapter Two</item>
		<item>Chapter Three</item>
		<item>Chapter Four</item>
		<item>Chapter Five</item>
		<item>Chapter Six</item>
		<item>Chapter Seven</item>
		<item>Chapter Eight</item>
		<item>Chapter Nine</item>
		<item>Chapter Ten</item>
		<item>Chapter Eleven</item>
		<item>Chapter Twelve</item>
		<item>Chapter Thirteen</item>
		<item>Chapter Fourteen</item>
		<item>Chapter Fifteen</item>
		<item>Chapter Sixteen</item>
		<item>Chapter Seventeen</item>
		<item>Chapter Eighteen</item>
		<item>Chapter Nineteen</item>
		<item>Chapter Twenty </item>
		<item>Chapter Twenty One</item>
		<item>Chapter Twenty Two</item>
		<item>Chapter Twenty Three</item>
		<item>Chapter Twenty Four</item>
		<item>Chapter Twenty Five</item>
		<item>Chapter Twenty Six</item>
		<item>Chapter Twenty Seven</item>
		<item>Chapter Twenty Eight</item>
		<item>Chapter Twenty Nine</item>
		<item>Chapter Thirty </item>

	</string-array>
	<string-array name="SoraName_array">
		<item>الفاتحة</item>
		<item>البقرة</item>
		<item>آل عمران</item>
		<item>النساء</item>
		<item>المائدة</item>
		<item>الأنعام</item>
		<item>الأعراف</item>
		<item>الأنفال</item>
		<item>التوبة</item>
		<item>يونس</item>
		<item>هود</item>
		<item>يوسف</item>
		<item>الرعد</item>
		<item>إبراهيم</item>
		<item>الحجر</item>
		<item>النحل</item>
		<item>الإسراء</item>
		<item>الكهف</item>
		<item>مريم</item>
		<item>طه</item>
		<item>الأنبياء</item>
		<item>الحج</item>
		<item>المؤمنون</item>
		<item>النور</item>
		<item>الفرقان</item>
		<item>الشعراء</item>
		<item>النمل</item>
		<item>القصص</item>
		<item>العنكبوت</item>
		<item>الروم</item>
		<item>لقمان</item>
		<item>السجدة</item>
		<item>الأحزاب</item>
		<item>سبأ</item>
		<item>فاطر</item>
		<item>يس</item>
		<item>الصافات</item>
		<item>ص</item>
		<item>الزمر</item>
		<item>غافر</item>
		<item>فصلت</item>
		<item>الشورى</item>
		<item>الزخرف</item>
		<item>الدخان</item>
		<item>الجاثية</item>
		<item>الأحقاف</item>
		<item>محمد</item>
		<item>الفتح</item>
		<item>الحجرات</item>
		<item>ق</item>
		<item>الذاريات</item>
		<item>الطور</item>
		<item>النجم</item>
		<item>القمر</item>
		<item>الرحمن</item>
		<item>الواقعة</item>
		<item>الحديد</item>
		<item>المجادلة</item>
		<item>الحشر</item>
		<item>الممتحنة</item>
		<item>الصف</item>
		<item>الجمعة</item>
		<item>المنافقون</item>
		<item>التغابن</item>
		<item>الطلاق</item>
		<item>التحريم</item>
		<item>الملك</item>
		<item>القلم</item>
		<item>الحاقة</item>
		<item>المعارج</item>
		<item>نوح</item>
		<item>الجن</item>
		<item>المزمل</item>
		<item>المدثر</item>
		<item>القيامة</item>
		<item>الإنسان</item>
		<item>المرسلات</item>
		<item>النبأ</item>
		<item>النازعات</item>
		<item>عبس</item>
		<item>التكوير</item>
		<item>الإنفطار</item>
		<item>المطففين</item>
		<item>الإنشقاق</item>
		<item>البروج</item>
		<item>الطارق</item>
		<item>الأعلى</item>
		<item>الغاشية</item>
		<item>الفجر</item>
		<item>البلد</item>
		<item>الشمس</item>
		<item>الليل</item>
		<item>الضحى</item>
		<item>الشرح</item>
		<item>التين</item>
		<item>العلق</item>
		<item>القدر</item>
		<item>البينة</item>
		<item>الزلزلة</item>
		<item>العاديات</item>
		<item>القارعة</item>
		<item>التكاثر</item>
		<item>العصر</item>
		<item>الهمزة</item>
		<item>الفيل</item>
		<item>قريش</item>
		<item>الماعون</item>
		<item>الكوثر</item>
		<item>الكافرون</item>
		<item>النصر</item>
		<item>المسد</item>
		<item>الإخلاص</item>
		<item>الفلق</item>
		<item>الناس</item>
	</string-array>
</resources>