<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:stretchColumns="1" android:id="@+id/TableLayoutMain">
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:stretchColumns="1" android:id="@+id/TableLayoutBody">
	</TableLayout>
	<TableLayout android:id="@+id/TableLayoutFooter"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:stretchColumns="*">
		<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<Button android:text="@string/ButtNew" android:id="@+id/ButNew"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:layout_width="wrap_content"></Button>
			<Button android:text="@string/ButtCancel" android:id="@+id/ButCancel"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:layout_width="wrap_content"></Button>
			<Button android:text="@string/ButtOK" android:id="@+id/ButOK"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:layout_weight="1"></Button>
		</TableRow>
	</TableLayout>
</TableLayout>